[tool.poetry]
name = "llm-sorter"
version = "0.1.0"
description = ""
authors = ["Philip Bankier <philipbankier@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
openai = "^0.11.0"  # Ensure you use the correct version
opencv-python-headless = "^4.5.2"
transformers = "^4.8.1"
numpy = "^1.21"
matplotlib = "^3.4.2"
plotly = "^5.1.0"
networkx = "^2.6"
tqdm = "^4.61.1"
python-magic = "^0.4.24"
chardet = "^4.0.0"
tenacity = "^8.0.1"
requests = "^2.25.1"
torch = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"